# swiftbots-crate

./: .gitignore  Cargo.toml  Makefile
docs/: todo.txt
examples/: chatbot.rs  hello_world.rs  oneshot.rs  telegram.rs
src/: app.rs  bot.rs  context.rs  lib.rs  middleware.rs  runner.rs  types.rs  utils.rs
src/basic/: bot.rs  functions.rs  middleware.rs  mod.rs  types.rs
src/chat/: bot.rs  context.rs  handlers.rs  middleware.rs  mod.rs  routing.rs  types.rs
src/middleware/: middleware.rs  mod.rs
src/telegram/: bot.rs  context.rs  helpers.rs  middleware.rs  mod.rs  types.rs
tests/: basic_bot_test.rs  token_trie_test.rs
