[package]
name = "swiftbots"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["sync", "rt"] }
tracing = "0.1.44"
tower = { version = "0.5.3", optional = true, features = ["util"] }
http = { version = "1.4.0", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tracing-subscriber = "0.3.23"
serde_json = "1.0.149"

[features]
default = []

middleware = []
basic = ["middleware", "dep:tower"]
chat = [
    "middleware",
    "dep:tower",
    "dep:http",
    "dep:regex"
]

full = [
    "basic",
    "chat",
    "middleware"
]

[[example]]
name = "hello_world"
required-features = ["basic"]

[[example]]
name = "chatbot"
required-features = ["chat"]
