[package]
name = "swiftbots"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
tower = { version = "0.5", optional = true, features = ["util"] }
http = { version = "1", optional = true }
regex = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tracing-subscriber = "0.3"

[features]
default = []

middleware = []
basic = ["middleware", "dep:tower"]
chat = [
    "basic",
    "middleware",
    "dep:tower",
    "dep:http",
    "dep:regex",
    "dep:serde_json"
]

full = [
    "basic",
    "chat",
    "middleware"
]

[[example]]
name = "hello_world"
required-features = ["basic"]

[[example]]
name = "chatbot"
required-features = ["chat"]
