[package]
name = "swiftbots"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "time"] }
tracing = { version = "0.1", features = [] }
tower = { version = "0.5", optional = true, features = ["util"] }
http = { version = "1", optional = true, features = [] }
regex = { version = "1", optional = true, features = [] }
serde_json = { version = "1", optional = true, features = [] }
reqwest = { version = "0.13", optional = true, features = ["json"] }
textwrap = { version = "0.16", optional = true, features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []

basic = [
    "dep:tower",
]
chat = [
    "basic",
    "dep:http",
    "dep:regex",
    "dep:serde_json"
]

telegram = [
    "chat",
    "dep:reqwest",
    "dep:textwrap",
]

full = [
    "basic",
    "chat",
    "telegram",
]

[[example]]
name = "hello_world"
required-features = ["basic"]

[[example]]
name = "chatbot"
required-features = ["chat"]

[[example]]
name = "telegram"
required-features = ["telegram"]

[[example]]
name = "oneshot"
required-features = ["basic"]

[lints.clippy]
redundant_field_names = "allow"
needless_return = "allow"